--- a/Desktop/TTS2016-master/build.xml
+++ b/Desktop/TTS2016-master/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="Parker_7_TTS2016" default="default" basedir=".">
-    <description>Builds, tests, and runs the project Parker_7_TTS2016.</description>
+<project name="Parker_7_BAS2016" default="default" basedir=".">
+    <description>Builds, tests, and runs the project Parker_7_BAS2016.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
@@ -58,7 +58,7 @@
 
     An example of overriding the target for project execution could look like this:
 
-        <target name="run" depends="Parker_7_TTS2016-impl.jar">
+        <target name="run" depends="Parker_7_BAS2016-impl.jar">
             <exec dir="bin" executable="launcher.exe">
                 <arg file="${dist.jar}"/>
             </exec>
