this stuff is hard

--- a/Desktop/TTS2016-master/nbproject/project.properties
+++ b/Desktop/TTS2016-master/nbproject/project.properties
@@ -29,13 +29,27 @@ dist.jar=${dist.dir}/Parker_7_BAS2016.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jinput.jar=/usr/share/slick2D/slick2d_shared/jinput.jar
+file.reference.jnlp.jar=/usr/share/slick2D/slick2d_shared/jnlp.jar
+file.reference.jogg-0.0.7.jar=/usr/share/slick2D/slick2d_shared/jogg-0.0.7.jar
+file.reference.jorbis-0.0.15.jar=/usr/share/slick2D/slick2d_shared/jorbis-0.0.15.jar
+file.reference.lwjgl.jar=/usr/share/slick2D/slick2d_shared/lwjgl.jar
+file.reference.lwjgl_util.jar=/usr/share/slick2D/slick2d_shared/lwjgl_util.jar
+file.reference.slick.jar=/usr/share/slick2D/slick2d_shared/slick.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MyLibrary.classpath}
+    ${file.reference.jinput.jar}:\
+    ${file.reference.jnlp.jar}:\
+    ${file.reference.jogg-0.0.7.jar}:\
+    ${file.reference.jorbis-0.0.15.jar}:\
+    ${file.reference.lwjgl.jar}:\
+    ${file.reference.lwjgl_util.jar}:\
+    ${file.reference.slick.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -64,9 +78,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=-Djava.library.path=/usr/share/slick2D/slick2d_shared/LWJGL_path/
 run.test.classpath=\
     ${javac.test.classpath}:\
